added home state

--- a/Module4Assignment4/src/components/dishes.template.html
+++ b/Module4Assignment4/src/components/dishes.template.html
@@ -1,3 +1,4 @@
+<a ui-sref="categories" style="text-align: left; display: block; max-width: 170px;">&lt; Back to Categories</a>
 <ul class="list-group">
   <li class="list-group-item active"><a class="homeLink" ui-sref='home'>Home </a>&gt; <span>Enjoy our <strong><u>{{$ctrl.title}}</u></strong> dishes!</span></li>
   <li class="list-group-item" ng-repeat='item in $ctrl.list' style="list-style-type: none; color: blue;">
