--- a/Module4Assignment4/src/components/categories.template.html
+++ b/Module4Assignment4/src/components/categories.template.html
@@ -1,4 +1,5 @@
 
+<a ui-sref="home" style="text-align: left; display: block;max-width: 170px;">&lt; Back Home</a>
 <ul class="list-group">
   <li class="list-group-item active">Select a category</li>
   <li class="list-group-item" ng-repeat="category in $ctrl.list" 
