--- a/Module4Assignment4/css/style.css
+++ b/Module4Assignment4/css/style.css
@@ -7,9 +7,13 @@
   text-decoration: none;
 }
 .loadingIcon {
-
+ position:fixed;
+  top:1%;
+  left:1%;
+  z-index: 1000;
 }
 
 .overlay{
-  position:static;
+  position:fixed;
+  top:10%;
 }
