--- a/Module4Assignment4/src/templates/categorieslist.template.html
+++ b/Module4Assignment4/src/templates/categorieslist.template.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-md-center" style="padding-top:10px;">
-      <h2 style="padding: 15px 0 15px 0;">Restaurant Menu</h2>
+      <h2>Restaurant Menu</h2>
         <categories list="main.categories"></categories>
     </div>
   </div>
