--- a/Module4Assignment4/src/templates/dish-list.template.html
+++ b/Module4Assignment4/src/templates/dish-list.template.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-md-center" style="padding-top:10px;">
-      <h3>Menu</h3>
+      <h3>{{list.category}}</h3>
         <dishes list="list.items" title="{{list.category}}"></dishes>
     </div>
   </div>
