--- a/Module4Assignment4/src/templates/home.template.html
+++ b/Module4Assignment4/src/templates/home.template.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12 text-md-center" style="padding-top:10px;">
+    <div class="col-sm-12 text-sm-center text-md-center" style="padding-top:10px;">
       <h2>Restaurant Menu</h2>
         <!--<categories list="main.categories"></categories>-->
         <button type="button" class="btn btn-primary btn-lg" ui-sref="categories">Show Categories</button>
